# informa

./: .dockerignore  .editorconfig  .env  .gitignore  .gitmodules  .pylintrc  AGENTS.md  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.py  manage.py  plugins.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup.py
config/: Dockerfile  Dockerfile-prod  Vagrantfile  flask.conf.py  gunicorn.conf.py  informa.service  minion  nginx.conf  requirements.txt  salt.inform.conf  supervisor.conf
config/pillar/: default_vars.sls  dev_vars.sls  prod_vars.sls.encrypted  top.sls
config/salt/: top.sls
config/salt/dev-build/: init.sls  tmux.sls
config/salt/inform/: flask.conf.py  init.sls  nginx.conf  supervisord.conf
config/salt/informa/: flask.conf.py  init.sls  nginx.conf  supervisord.conf
config/salt/tmux-segments/: init.sls
config/salty-vagrant/: Vagrantfile  salt-minion.conf
inform/: __init__.py  base_plugin.py  celery.py  views.py
inform/alerts/: sns.py  zapier.py
inform/base_plugins/: __init__.py  heartbeat.py  httpgrep.py
inform/plugins/: f1_torrents.py  livescore.py  melmetro.py  pccasegear.py  rtorrent.py  tramtracker.py  vagrantup.py  weather.py
informa/: __init__.py  admin.py  api.py  app.py  celery.py  cli.py  exceptions.py  helpers.py  main.py  schema.py  views.py
informa/alerts/: sns.py  zapier.py
informa/base_plugins/: __init__.py  httpgrep.py
informa/lib/: __init__.py  config.py  decorators.py  json.py  mailgun.py  plugin.py  pretty.py  redis.py  rtorrent.py  utils.py
informa/lib/alexa/: decorators.py
informa/plugins/: dans.py  dht22.py  f1_torrents.py  f1torrents.py  ha_releases.py  hsbc_statements.py  kindle_gcal.py  livescore.py  megadl.py  melmetro.py  mp3.py  ofx.py  pccasegear.py  rtorrent.py  slsk.py  tahbilk.py  tailscale_dns.py  tob.py  torrentgalaxy.py  tramtracker.py  ukforex.py  vagrantup.py  weather.py
informa/plugins/base/: __init__.py  heartbeat.py  httpgrep.py
informa/plugins/base/alerts/: zapier.py
informa/plugins/melmetro/: __init__.py  alexa.py  exceptions.py
informa/plugins/mpd/: __init__.py  alexa.py  decorators.py
informa/views/: base.py
lib/: memcache_wrapper.py  plugin.py
templates/: dans.tmpl  f1torrents.tmpl  ha.tmpl  kindle_gcal.tmpl  kindle_gcal_event.tmpl  product_price_url.tmpl  tahbilk.tmpl  torrentgalaxy.tmpl
test/: conftest.py  test_cli.py  test_config.py  test_main.py  test_plugin.py  test_plugin_ha_releases.py  test_plugin_tob.py  test_timeseries_store.py
test/fixtures/: ha_releases.txt  tob_email_18260.txt  tob_email_20405.txt  tob_email_25751.txt  tob_email_mixed_18109.txt  tob_email_pack_21868.txt  tob_email_singles_23025.txt  tob_site_pack_18109.txt  tob_site_pack_18523.txt  tob_site_pack_18523_item_1.txt  tob_site_pack_18523_item_2.txt  tob_site_pack_18523_item_3.txt  tob_site_pack_18523_item_4.txt  tob_site_pack_18523_item_5.txt  tob_site_pack_18523_item_6.txt  tob_site_pack_21867.txt  tob_site_pack_21868.txt  tob_site_pack_25751.txt  tob_site_pack_25751_item_1.txt  tob_site_pack_25751_item_2.txt  tob_site_pack_25751_item_3.txt  tob_site_pack_25751_item_4.txt  tob_site_pack_25751_item_5.txt  tob_site_pack_25751_item_6.txt  tob_site_single_23025.txt  tob_site_single_24561.txt  tob_site_single_26876.txt
