[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "informa"
description = "API scraper and more based on rocketry"
dynamic = ["version"]
requires-python = ">=3.11"
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Console",
	"Natural Language :: English",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.12",
]
dependencies = [
	"arrow==1.3.0",
	"beautifulsoup4==4.11.1",
	"click==8.1.3",
	"dataclasses-json==0.6.4",
	"fake-useragent==1.1.1",
	"fastapi==0.109.1",
	"feedparser==6.0.10",
	"gcsa @ https://github.com/mafrosis/gcsa/releases/download/2.2.1-dev/gcsa-dev-py3-none-any.whl",
	"Jinja2==3.1.3",
	"pandas>2.2,<2.3",
	"pydantic==1.10.16",
	"pyyaml~=6.0",
	"requests==2.31.0",
	"rich==13.3.3",
	"rocketry==2.5.1",
	"uvicorn==0.24.0",
]

[project.scripts]
informa = "informa.cli:cli"

##### Hatch

[tool.hatch.version]
path = "informa/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = ["test*", "venv*"]

[tool.hatch.metadata]
allow-direct-references = true


[tool.hatch.envs.default]
dependencies = ["ipdb"]

[tool.hatch.envs.test]
dependencies = [
	"google-api-python-client-stubs",
	"pandas-stubs",
	"pytest",
	"pytest-sugar",
	"pytest-mypy",
	"types-beautifulsoup4",
	"types-click",
	"types-PyYAML",
	"types-requests",
]

[tool.hatch.envs.test.scripts]
test = "pytest --disable-pytest-warnings test"
mypy = "pytest --mypy informa"

[tool.hatch.envs.lint]
detached = true  # do not install package
dependencies = [
	"pylint",
]

[tool.hatch.envs.lint.scripts]
lint = "pylint informa"
