[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "informa"
description = "API scraper and more based on rocketry"
dynamic = ["version"]
requires-python = ">=3.11"
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Console",
	"Natural Language :: English",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.12",
]
dependencies = [
	"arrow==1.3.0",
	"beautifulsoup4==4.11.1",
	"click==8.2.0",
	"dataclasses-json==0.6.7",
	"eyeD3==0.9.8",
	"fake-useragent==1.1.1",
	"fastapi==0.109.1",
	"feedparser==6.0.10",
	"gcsa==2.3.0",
	"Jinja2==3.1.6",
	"legacy-cgi; python_version >= '3.13'",
	"orjson>=3.10,<3.11",
	"paho-mqtt==2.1.0",
	"pandas>2.2,<2.3",
	"paramiko>=3.4,<3.5",
	"pillow",
	"polars==1.30.0",
	"pyarrow",
	"playwright",
	"pydantic==1.10.16",
	"pytz",
	"pyyaml~=6.0",
	"slskd_api",
	"requests==2.31.0",
	"rich==13.3.3",
	"rocketry==2.5.1",
	"uvicorn==0.24.0",
]

[project.scripts]
informa = "informa.cli:cli"

##### Hatch

[tool.hatch.version]
path = "informa/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = ["test*", "venv*"]

[tool.hatch.metadata]
allow-direct-references = true


[tool.hatch.envs.default]
installer = "uv"
dependencies = ["ipdb"]
pre-install-commands = [
  "uv pip install -e transto",
  "uv pip install -e gmsa",
]

[tool.hatch.envs.test]
installer = "uv"
dependencies = [
	"google-api-python-client-stubs",
	"ipdb",
	"pandas-stubs",
	"pytest",
	"pytest-sugar",
	"pytest-mypy",
	"types-beautifulsoup4",
	"types-click",
	"types-paramiko",
	"types-PyYAML",
	"types-requests",
]

[tool.hatch.envs.test.scripts]
test = "pytest --disable-pytest-warnings test"
mypy = "pytest --mypy informa"
