[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "informa"
description = "API scraper and more based on rocketry"
dynamic = ["version"]
requires-python = ">=3.11"
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Console",
	"Natural Language :: English",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.12",
]
dependencies = [
	"arrow==1.3.0",
	"beautifulsoup4~=4.0",
	"click==8.2.0",
	"dataclasses-json==0.6.7",
	"eyeD3==0.9.8",
	"fake-useragent~=2.0",
	"fastapi==0.116.1",
	"feedparser==6.0.10",
	"google-api-python-client==2.185.0",
	"gcsa==2.3.0",
	"gmsa @ git+https://github.com/mafrosis/gmsa.git",
	"Jinja2~=3.1.3",
	"legacy-cgi; python_version >= '3.13'",
	"orjson~=3.10",
	"paho-mqtt~=2.1.0",
	"pandas~=2.2.0",
	"paramiko~=3.4.0",
	"pillow",
	"polars~=1.30.0",
	"pyarrow==21.0.0",
	"playwright",
	"pydantic==1.10.16",
	"pytz",
	"pyyaml~=6.0",
	"requests~=2.0",
	"rich~=14.0",
	"rocketry==2.5.1",
	"slskd_api==0.1.5",
	"transto @ git+https://github.com/mafrosis/transto.git",
	"uvicorn==0.35.0",
]

[project.scripts]
informa = "informa.cli:cli"

##### Hatch

[tool.hatch.version]
path = "informa/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = ["test*", "venv*"]

[tool.hatch.metadata]
allow-direct-references = true


[tool.hatch.envs.default]
installer = "uv"
dependencies = ["ipdb"]
pre-install-commands = [
  "uv pip install -e transto",
  "uv pip install -e gmsa",
]

[tool.hatch.envs.test]
installer = "uv"
dependencies = [
	"google-api-python-client-stubs",
	"ipdb",
	"pandas-stubs",
	"pytest",
	"pytest-sugar",
	"pytest-mypy",
	"types-beautifulsoup4",
	"types-click",
	"types-paramiko",
	"types-PyYAML",
	"types-requests",
]

[tool.hatch.envs.test.scripts]
test = "pytest --disable-pytest-warnings test"
mypy = "pytest --mypy informa"
